Fixed the footer icons imports. Made the contributor row animation alternate directions, making it loop seamlessly. Made some alt text changes to the docs. Made the header chip of the community section more visible. Updated packages.

--- a/src/styles/pages/blogPost.scss
+++ b/src/styles/pages/blogPost.scss
@@ -14,7 +14,7 @@
 	}
 }
 
-.back-button {
+:global(.back-button) {
 	color: var(--text-color-tertiary);
 }
 
